<resources>
    <string name="app_name">HomeWork4</string>
    <string name="action_settings">Settings</string>
    <string name="txtLine1">Line1</string>
    <string name="txtLine2">Line2</string>

    <string name="label1">You clicked the following Item</string>
    <string name="change_list_button">Change List</string>
    <string name="button2">Press to activate</string>
    <string name="textView2">My text1</string>
    <string name="textView3">My text2</string>
    <string name="editText">Text for edit</string>
    <string name="editText2">Text For Edit</string>
    <string name="change_button">Press for change</string>
    <string name="exit_button">Exit</string>
    <string name="dialog_fragment">fragment_edit_name</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="btn_sheduler_ok">OK</string>
    <string name="txt_sheduler_start">Начало</string>
    <string name="txt_sheduler_end">Конец</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="eventName">Event Name</string>
    <string name="eventBody">Event Body</string>
    <string name="sheduleJobTitle1">Event Body</string>
    <string name="ex_title">ex_title></string>
    <string name="ex_text">ex_text></string>
    <string name="ex_BigText"></string>

</resources>
